--- a/index.html
+++ b/index.html
@@ -3,44 +3,455 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC"
+      crossorigin="anonymous"
+    />
     <script
-      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
-      integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
       crossorigin="anonymous"
     ></script>
     <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
+      href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"
       rel="stylesheet"
-      integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
-      crossorigin="anonymous"
     />
-    <title>Simple Calculator</title>
+    <script
+      src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"
+      integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p"
+      crossorigin="anonymous"
+    ></script>
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js"
+      integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF"
+      crossorigin="anonymous"
+    ></script>
+
+    <title>BCCI HOME PAGE</title>
     <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
-    <div class="calculator">
-      <input type="text" id="display" disabled />
-      <div class="buttons">
-        <button onclick="clearDisplay()">C</button>
-        <button onclick="appendToDisplay('/')">/</button>
-        <button onclick="appendToDisplay('*')">*</button>
-        <button onclick="deleteLast()">DEL</button>
-        <button onclick="appendToDisplay('7')">7</button>
-        <button onclick="appendToDisplay('8')">8</button>
-        <button onclick="appendToDisplay('9')">9</button>
-        <button onclick="appendToDisplay('-')">-</button>
-        <button onclick="appendToDisplay('4')">4</button>
-        <button onclick="appendToDisplay('5')">5</button>
-        <button onclick="appendToDisplay('6')">6</button>
-        <button onclick="appendToDisplay('+')">+</button>
-        <button onclick="appendToDisplay('1')">1</button>
-        <button onclick="appendToDisplay('2')">2</button>
-        <button onclick="appendToDisplay('3')">3</button>
-        <button onclick="calculate()" class="equals">=</button>
-        <button onclick="appendToDisplay('0')" class="zero">0</button>
-        <button onclick="appendToDisplay('.')">.</button>
+    <nav class="navbar navbar-expand-lg navbar-dark">
+      <a class="navbar-brand" href="https://www.bcci.tv/">
+        <img
+          src="https://res.cloudinary.com/dn7k0nzgp/image/upload/v1737976071/R_2_y54uoq.jpg"
+          alt="Profile Image"
+        />
+        <p>BCCI HOME PAGE</p>
+      </a>
+      <button
+        class="navbar-toggler"
+        type="button"
+        data-toggle="collapse"
+        data-target="#navbarNav"
+        aria-controls="navbarNav"
+        aria-expanded="false"
+        aria-label="Toggle navigation"
+      >
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarNav">
+        <ul class="navbar-nav ml-auto">
+          <li class="nav-item">
+            <a class="nav-link" href="https://rs4321.ccbp.tech/">Home</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#">About IPL</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#">Contact</a>
+          </li>
+        </ul>
+      </div>
+    </nav>
+
+    <div class="container mt-4">
+      <ul class="nav nav-pills mb-3" id="pills-tab" role="tablist">
+        <li class="nav-item" role="presentation">
+          <button
+            class="nav-link active"
+            id="pills-home-tab"
+            data-toggle="pill"
+            data-target="#pills-home"
+            type="button"
+            role="tab"
+            aria-controls="pills-home"
+            aria-selected="true"
+          >
+            Galleries
+          </button>
+        </li>
+        <li class="nav-item" role="presentation">
+          <button
+            class="nav-link"
+            id="pills-profile-tab"
+            data-toggle="pill"
+            data-target="#pills-profile"
+            type="button"
+            role="tab"
+            aria-controls="pills-profile"
+            aria-selected="false"
+          >
+            Latest News
+          </button>
+        </li>
+        <li class="nav-item" role="presentation">
+          <button
+            class="nav-link"
+            id="pills-contact-tab"
+            data-toggle="pill"
+            data-target="#pills-contact"
+            type="button"
+            role="tab"
+            aria-controls="pills-contact"
+            aria-selected="false"
+          >
+            Shop
+          </button>
+        </li>
+      </ul>
+      <div class="tab-content" id="pills-tabContent">
+        <div
+          class="tab-pane fade show active"
+          id="pills-home"
+          role="tabpanel"
+          aria-labelledby="pills-home-tab"
+        >
+          <h3>In Motion</h3>
+          <p>
+            Extreme Sports: Thrilling images of activities like skydiving,
+            surfing, and rock climbing. Team Sports: Action shots from soccer,
+            basketball, and baseball games. Fitness: Photos of athletes training
+            and competing in various sports.
+          </p>
+          <a href="image.html">
+            <button type="button" class="btn btn-primary">
+              Open Galleries
+            </button></a
+          >
+        </div>
+        <div
+          class="tab-pane fade"
+          id="pills-profile"
+          role="tabpanel"
+          aria-labelledby="pills-profile-tab"
+        >
+          <h3>"Cricket Buzz: Stay Updated with the Latest Happenings"</h3>
+          <p>
+            Cricket is not without its share of controversies. From
+            ball-tampering scandals to player disputes, these incidents keep the
+            sport in the headlines.A look ahead at the upcoming cricket series
+            and tournaments that fans can look forward to.
+          </p>
+          <a href="latest.html">
+            <button type="button" class="btn btn-primary">
+              View Stories
+            </button></a
+          >
+        </div>
+        <div
+          class="tab-pane fade"
+          id="pills-contact"
+          role="tabpanel"
+          aria-labelledby="pills-contact-tab"
+        >
+          <h3>Wear Your Passion</h3>
+          <p>
+            Show your true colors and support Indian cricket team with our
+            vibrant merchandise
+          </p>
+          <a
+            href="https://www.adidas.co.in/cricket?cm_mmc=AdiDisplay_BCCI-_-cricket-_-kits-_-Brand-_-_-_-dv:eCom-_-cn:NA_Reach-_-pc:cricket&cm_mmc1=IN&cm_mmc2=adidas-EMEA-eCom-Display-BCCI-Brand-cricket-IN-NA-None-12345"
+          >
+            <button type="button" class="btn btn-primary">Shop Now</button></a
+          >
+        </div>
       </div>
     </div>
-    <script src="caculator.js"></script>
+
+    <div
+      id="carouselExampleDark"
+      class="carousel carousel-dark slide"
+      data-bs-ride="carousel"
+    >
+      <div class="carousel-indicators">
+        <button
+          type="button"
+          data-bs-target="#carouselExampleDark"
+          data-bs-slide-to="0"
+          class="active"
+          aria-current="true"
+          aria-label="Slide 1"
+        ></button>
+        <button
+          type="button"
+          data-bs-target="#carouselExampleDark"
+          data-bs-slide-to="1"
+          aria-label="Slide 2"
+        ></button>
+        <button
+          type="button"
+          data-bs-target="#carouselExampleDark"
+          data-bs-slide-to="2"
+          aria-label="Slide 3"
+        ></button>
+      </div>
+      <div class="carousel-inner">
+        <div class="carousel-item active" data-bs-interval="10000">
+          <img
+            src="https://res.cloudinary.com/dn7k0nzgp/image/upload/v1737978925/OIF_vkqq6k.jpg"
+            class="d-block w-100"
+            alt="BCCI Chair mam"
+          />
+          <div class="carousel-caption d-none d-md-block">
+            <h5>Jay Shah</h5>
+            <p>
+              Jay Shah is set to become the BCCI Chairman in 20251. He has been
+              the BCCI secretary since 2019 and will take over from the current
+              incumbent, Greg Barclay2
+            </p>
+          </div>
+        </div>
+        <div class="carousel-item" data-bs-interval="2000">
+          <img
+            src="https://img.freepik.com/premium-photo/cricket-players-waiting-match-stadium_546192-7124.jpg"
+            class="d-block w-100"
+            alt="..."
+          />
+          <div class="carousel-caption d-none d-md-block">
+            <h5>Latest News</h5>
+            <p>Cricket Buzz: Stay Upadated</p>
+          </div>
+        </div>
+        <div class="carousel-item">
+          <img
+            src="https://res.cloudinary.com/dn7k0nzgp/image/upload/v1737979502/Cricket_5_1727677577296_1727677629651_r6bnbh.webp"
+            class="d-block w-100"
+            alt="..."
+          />
+          <div class="carousel-caption d-none d-md-block">
+            <h5>In Motion</h5>
+            <p>Extreme Sports Trilling Images</p>
+          </div>
+        </div>
+      </div>
+      <button
+        class="carousel-control-prev"
+        type="button"
+        data-bs-target="#carouselExampleDark"
+        data-bs-slide="prev"
+      >
+        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+        <span class="visually-hidden">Previous</span>
+      </button>
+      <button
+        class="carousel-control-next"
+        type="button"
+        data-bs-target="#carouselExampleDark"
+        data-bs-slide="next"
+      >
+        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+        <span class="visually-hidden">Next</span>
+      </button>
+    </div>
+
+    <div class="container">
+      <div class="app-promo">
+        <h1>Get the Official BCCI App</h1>
+        <p>
+          Get the latest scores on the go. Find the latest content, including
+          match highlights, press conferences and recap all at your fingertips
+          by downloading the official BCCI app.
+        </p>
+        <div class="app-images">
+          <img
+            src="https://res.cloudinary.com/dn7k0nzgp/image/upload/v1737982291/GQqmogia0AEgMbH_xtw052.jpg"
+            alt="App Image 1"
+          />
+          <img
+            src="https://res.cloudinary.com/dn7k0nzgp/image/upload/v1737982290/get-official-bcci-mobile_nmpaet.png"
+            alt="App Image 2"
+          />
+        </div>
+        <a
+          href="https://play.google.com/store/apps/details?id=com.bcci"
+          class="btn btn-google"
+          target="_blank"
+          >Get it on Google Play</a
+        >
+        <a
+          href="https://apps.apple.com/us/app/bcci/id1234567890"
+          class="btn btn-apple"
+          target="_blank"
+          >Download on the App Store</a
+        >
+      </div>
+    </div>
+    <div class="sponsors">
+      <div class="container">
+        <div class="row">
+          <div class="col-md-2">
+            <h5>Title Sponsor</h5>
+            <img
+              src="https://res.cloudinary.com/dn7k0nzgp/image/upload/v1737981279/Banner_tmtksd.jpg"
+              alt="Title Sponsor"
+            />
+          </div>
+          <div class="col-md-2">
+            <h5>Lead Sponsor</h5>
+            <img
+              src="https://res.cloudinary.com/dn7k0nzgp/image/upload/v1737981347/dream11_zkbiyi.webp"
+              alt="Lead Sponsor"
+            />
+          </div>
+          <div class="col-md-2">
+            <h5>Kit Sponsor</h5>
+            <img
+              src="https://res.cloudinary.com/dn7k0nzgp/image/upload/v1737981364/hq720_njbv6e.jpg"
+              alt="Kit Sponsor"
+            />
+          </div>
+          <div class="col-md-2">
+            <h5>Official Partners</h5>
+            <img
+              src="https://res.cloudinary.com/dn7k0nzgp/image/upload/v1737981436/a547cbee3ccc52330d7040909aaf1c77_nq0uig.webp"
+              alt="Official Partner 1"
+            />
+            <img
+              src="https://res.cloudinary.com/dn7k0nzgp/image/upload/v1737982042/OIP_rcwoqp.jpg"
+              alt="Official Partner 2"
+            />
+          </div>
+          <div class="col-md-2">
+            <h5>Official Broadcaster</h5>
+            <img
+              src="https://res.cloudinary.com/dn7k0nzgp/image/upload/v1737981475/jc_logo_stack-1682163295957_wnmis3.jpg"
+              alt="Official Broadcaster"
+            />
+          </div>
+          <div class="col-md-2">
+            <h5>Official Digital Streaming Partner</h5>
+            <img
+              src="https://res.cloudinary.com/dn7k0nzgp/image/upload/v1737981573/Sports-18_q0ir6i.jpg"
+              alt="Official Streaming Partner"
+            />
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="footer">
+      <div class="container">
+        <div class="footer-logo">
+          <img
+            src="https://res.cloudinary.com/dn7k0nzgp/image/upload/v1737976071/R_2_y54uoq.jpg"
+            alt="BCCI Logo"
+          />
+        </div>
+        <div class="footer-section">
+          <div>
+            <h5>Contact Us</h5>
+            <p>
+              4th Floor, Cricket Centre<br />Wankhede Stadium 'D' Road,<br />Churchgate,
+              Mumbai - 400020, India.
+            </p>
+            <p>Email: office@bcci.tv</p>
+            <p>Tel: +91 22 67598800</p>
+            <p>Fax: +91 22 61580300</p>
+          </div>
+          <div>
+            <h5>Matches</h5>
+            <a href="#">Domestic</a><br />
+            <a href="#">International</a>
+          </div>
+          <div>
+            <h5>Videos</h5>
+            <a href="#">Latest</a><br />
+            <a href="#">Highlights</a><br />
+            <a href="#">Features and Interviews</a><br />
+            <a href="#">Press Conferences</a>
+          </div>
+          <div>
+            <h5>News</h5>
+            <a href="#">Latest</a><br />
+            <a href="#">Press Releases</a><br />
+            <a href="#">Features and Interviews</a><br />
+            <a href="#">BCCI News</a>
+          </div>
+          <div>
+            <h5>More</h5>
+            <a href="#">IPL</a><br />
+            <a href="#">WPL</a><br />
+            <a href="#">Venues</a><br />
+            <a href="#">Galleries</a><br />
+            <a href="#">Jobs</a><br />
+            <a href="#">Tender</a><br />
+            <a href="#">Playing Conditions</a>
+          </div>
+          <div>
+            <h5>About</h5>
+            <a href="#">History</a><br />
+            <a href="#">Anti Corruption</a><br />
+            <a href="#">Anti Racism</a><br />
+            <a href="#">Anti Doping</a><br />
+            <a href="#">TUE Application form</a><br />
+            <a href="#">Annual Reports</a><br />
+            <a href="#">MCC Laws of Cricket</a>
+          </div>
+          <div>
+            <h5>Players</h5>
+            <a href="#">Men</a><br />
+            <a href="#">Women</a>
+          </div>
+          <div>
+            <h5>BCCI</h5>
+            <a href="#">Copyrights</a><br />
+            <a href="#">Terms and Conditions</a><br />
+            <a href="#">Privacy and Policy</a>
+          </div>
+        </div>
+        <div class="social-media">
+          <a href="#"
+            ><svg
+              xmlns="http://www.w3.org/2000/svg"
+              width="16"
+              height="16"
+              fill="currentColor"
+              class="bi bi-browser-chrome"
+              viewBox="0 0 16 16"
+            >
+              <path
+                fill-rule="evenodd"
+                d="M16 8a8 8 0 0 1-7.022 7.94l1.902-7.098a3 3 0 0 0 .05-1.492A3 3 0 0 0 10.237 6h5.511A8 8 0 0 1 16 8M0 8a8 8 0 0 0 7.927 8l1.426-5.321a3 3 0 0 1-.723.255 3 3 0 0 1-1.743-.147 3 3 0 0 1-1.043-.7L.633 4.876A8 8 0 0 0 0 8m5.004-.167L1.108 3.936A8.003 8.003 0 0 1 15.418 5H8.066a3 3 0 0 0-1.252.243 2.99 2.99 0 0 0-1.81 2.59M8 10a2 2 0 1 0 0-4 2 2 0 0 0 0 4"
+              /></svg
+          ></a>
+          <a href="#"
+            ><svg
+              xmlns="http://www.w3.org/2000/svg"
+              width="16"
+              height="16"
+              fill="currentColor"
+              class="bi bi-facebook"
+              viewBox="0 0 16 16"
+            >
+              <path
+                d="M16 8.049c0-4.446-3.582-8.05-8-8.05C3.58 0-.002 3.603-.002 8.05c0 4.017 2.926 7.347 6.75 7.951v-5.625h-2.03V8.05H6.75V6.275c0-2.017 1.195-3.131 3.022-3.131.876 0 1.791.157 1.791.157v1.98h-1.009c-.993 0-1.303.621-1.303 1.258v1.51h2.218l-.354 2.326H9.25V16c3.824-.604 6.75-3.934 6.75-7.951"
+              /></svg
+          ></a>
+        </div>
+        <div class="copyright">
+          <p>© Copyrights BCCI 2025. All Rights Reserved.</p>
+          <p>
+            <a href="#">Terms & Conditions</a> | <a href="#">Privacy Policy</a>
+          </p>
+        </div>
+      </div>
+    </div>
+
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.4/dist/umd/popper.min.js"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
   </body>
 </html>
