Your commit message

--- a/index.html
+++ b/index.html
@@ -10,11 +10,12 @@
 </head>
 <body>
     <nav class="navbar navbar-expand-lg">
-        <a class="navbar-brand" href="#">AudioHub</a>
+        <a class="navbar-brand" href="home.html">AudioHub</a>
         <div class="collapse navbar-collapse">
             <ul class="navbar-nav mr-auto">
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Home</a>
+                    <a class="nav-link" href="home.html">Home</a>
+                    
                 </li>
                 
             </ul>
